--- a/src/client/css/pages.less
+++ b/src/client/css/pages.less
@@ -1,3 +1,9 @@
+.page_image {
+    position: absolute;
+    margin-top: -10000px;
+    margin-left: -10000px;
+}
+
 .page {
     .logo {
         text-align: center;
